<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.abeez.firefling.MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_url_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/url_hint"
                android:imeOptions="actionGo"
                android:inputType="textUri"
                android:backgroundTint="@android:color/transparent"
                android:singleLine="true" />

            <Button
                android:id="@+id/b_clear_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="X" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_loadingBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            tools:visibility="invisible" />
    </LinearLayout>

    <WebView
        android:id="@+id/wv_browser"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_layoutHolder"
        android:layout_below="@id/header">

        <requestFocus />
    </WebView>

    <LinearLayout
        android:id="@+id/ll_layoutHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tv_videoList"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:textColor="@color/colorPrimary"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_mediaContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:orientation="vertical"
            android:padding="4dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_currentDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <SeekBar
                    android:id="@+id/sb_seekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_totalDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_backward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@string/rewinds_stream_10_seconds"
                    android:focusable="true"
                    android:onClick="onClick"
                    android:paddingEnd="33dp"
                    android:paddingStart="10dp"
                    android:src="@drawable/ic_jump_back_10_default_light_36dp" />

                <ImageView
                    android:id="@+id/iv_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/iv_backward"
                    android:clickable="true"
                    android:contentDescription="@string/plays_video"
                    android:focusable="true"
                    android:onClick="onClick"
                    android:paddingEnd="33dp"
                    android:paddingStart="0dp"
                    android:src="@drawable/ic_play_default_light_36dp"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/iv_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/iv_backward"
                    android:clickable="true"
                    android:contentDescription="@string/pauses_video"
                    android:focusable="true"
                    android:onClick="onClick"
                    android:paddingEnd="33dp"
                    android:paddingStart="0dp"
                    android:src="@drawable/ic_pause_default_light_36dp" />

                <ImageView
                    android:id="@+id/iv_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/iv_play"
                    android:clickable="true"
                    android:contentDescription="@string/stops_streaming_video"
                    android:focusable="true"
                    android:onClick="onClick"
                    android:paddingEnd="33dp"
                    android:paddingStart="0dp"
                    android:src="@drawable/ic_stop_default_light_36dp" />

                <ImageView
                    android:id="@+id/iv_forward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/iv_stop"
                    android:clickable="true"
                    android:contentDescription="@string/fast_forwards_stream_10_seconds"
                    android:focusable="true"
                    android:onClick="onClick"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:src="@drawable/ic_jump_forward_10_default_light_36dp" />
            </RelativeLayout>
        </LinearLayout>

        <fragment android:name="com.abeez.firefling.BannerAdFragment"
            android:id="@+id/f_bannerAd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <!--<com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/av_bannerAd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
             ads:adUnitId="ca-app-pub-6217417570479825/8493868628"-->

    </LinearLayout>
</RelativeLayout>